add a link for hw2

--- a/website/index.html
+++ b/website/index.html
@@ -10,10 +10,11 @@
     <h1>Welcome to IS 445/545</h1>
     <hr>
     <div>Hello Kaori Sawada</div>
+    <div><a href="hm2.html">My Profile</a></div>
     <div>The current time is: <span id="output"></span></div>
     <p>Secret mission starts here. Now. </p>
     
-    
+
     <script src="app.js"></script>
 </body>
 </html>
