changed path name

--- a/website/myprofile.html
+++ b/website/myprofile.html
@@ -8,10 +8,10 @@
     <title>Homework2</title>
 </head>
 <body>
-        <h1>Sawada, Kaori<img calss="border"src="/images/image001.png" alt="line" width=50%></h1>
+        <h1>Sawada, Kaori<img calss="border"src="image001.png" alt="line" width=50%></h1>
         <!--<span style="border-bottom: solid 4px #F3AAEF;">Sawada, Kaori</span>-->
         <p align="center"><i>Welcome to IS445 Homework2</i></p>
-        <img src="/images/image001.jpg" alt="cat">
+        <img src="image001.jpg" alt="cat">
         <br>
         <div class=a style="margin-left:250px">
             <p class=categories>Education</p>
