final review to submit hw2

--- a/website/myprofile.html
+++ b/website/myprofile.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Homework2</title>
 </head>
 <body>
-        <h1>Sawada, Kaori<img calss="border"src="image001.png" alt="line" width=50%></h1>
+        <h1>Sawada, Kaori</h1>
+        <img calss="border"src="image001.png" alt="line" width=45%>
         <!--<span style="border-bottom: solid 4px #F3AAEF;">Sawada, Kaori</span>-->
         <p align="center"><i>Welcome to IS445 Homework2</i></p>
+
         <img src="image001.jpg" alt="cat">
         <br>
         <div class=a style="margin-left:250px">
